NFT preview card component 2

--- a/index.html
+++ b/index.html
@@ -12,16 +12,95 @@
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+    body{
+      background-color:hsl(217, 54%, 11%) ;
+    }
+
+    .conteiner{
+      background-color: hsl(216, 50%, 16%);
+      border-radius: 10px;
+      width: 350px;
+      height: 596px;
+      margin: auto;
+      padding: 14px 24px;
+      position: relative;
+          }
+    .imgconteiner{
+      width: 302px;
+      height: 302px;
+      top: 24px;
+      left: 24px;
+      position: relative;
+    }
+    .imgconteiner img{
+      width: 100%;
+      margin: auto;
+      border-radius: 8px;
+    }
+
+    .header-text-content{
+      width: 302px;
+      height: 28px;
+      position: relative;
+      top: 48px;
+      left: 24px;
+      /* background-color: red; */
+      color:white;
+      cursor: pointer;
+    }
+    .header-text-content:hover{
+    color:cyan
+    }
+
+    .text2{
+      width: 302px;
+height: 52px;
+top: 48px;
+left: 24px;
+/* background-color: red; */
+color: hsl(215, 51%, 70%);
+position: relative;
+
+    }
+
+    .icons-line{
+      width: 301px;
+height: 20px;
+top: 50px;
+left: 24px;
+position: relative;
+
+    }
+
   </style>
 </head>
 <body>
 
-  Equilibrium #3429
 
+  <div class="conteiner">
+      <div class="imgconteiner">
+      <img src="images/image-equilibrium.jpg" />
+      </div>
+      <div class="header-text-content">
+        Equilibrium #3429
+      </div>
+      <div class="text2">
+        
   Our Equilibrium collection promotes balance and calm.
+      </div>
+      <div class="icons-line">
+       <samp>0.041 ETH</samp> 
+  <samp>3 days left</samp>
+      </div>
+            
+  </div>
 
-  0.041 ETH
-  3 days left
+
+
+  
+
+
+  
   
   Creation of Jules Wyvern
 
