--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; position: absolute; bottom: 15px; left: 25px; }
     .attribution a { color: hsl(228, 45%, 44%); }
     body{
       background-color:hsl(217, 54%, 11%) ;
@@ -65,13 +65,60 @@ position: relative;
 
     .icons-line{
       width: 301px;
-height: 20px;
-top: 50px;
-left: 24px;
-position: relative;
-
+      height: 20px;
+      top: 50px;
+      left: 24px;
+      position: relative;
+      display: flex;
+      justify-content:space-between;
+      font-weight: 600;
     }
+    .icons-line img{
+    margin: 5px;
+    }
+    .icons-line samp{
+      color: hsl(215, 51%, 70%);
 
+      display: flex;
+    align-items: center;
+    }
+.eth{
+  color:cyan !important;
+}
+.line{
+  width: 302px;
+  height: 1px;
+  background-color:hsl(215, 51%, 70%);
+  position: relative;
+  top: 65px;
+  left: 24px;
+}
+.creator{
+  width: 230px;
+height: 33px;
+position: relative;
+top: 75px;
+left: 24px;
+display: flex;
+align-items: center;
+color:hsl(215, 51%, 70%);
+
+}
+.creator img{
+  margin-right: 8px;
+width: 33px;
+border: 1px solid hsl(215, 51%, 70%);
+border-radius: 50%;
+}
+.creator-name:hover{
+  color:cyan;
+}
+
+  .creator-name{
+  margin-left: 12px;
+  color:white;
+  cursor: pointer;
+}
   </style>
 </head>
 <body>
@@ -89,10 +136,21 @@ position: relative;
   Our Equilibrium collection promotes balance and calm.
       </div>
       <div class="icons-line">
-       <samp>0.041 ETH</samp> 
-  <samp>3 days left</samp>
+       <samp class="eth"><img src="images/icon-ethereum.svg" /> 0.041 ETH</samp> 
+      <samp><img src="images/icon-clock.svg" />3 days left</samp>
       </div>
-            
+            <div class="line"> </div>
+
+            <div class="creator">
+              <img src="images/image-avatar.png" />Creation of<samp class="creator-name"> Jules Wyvern</samp>
+            </div>
+
+
+            <div class="attribution">
+              Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+              Coded by <a href="#">Roland Artmeladze</a>.
+            </div>
+          
   </div>
 
 
@@ -102,11 +160,7 @@ position: relative;
 
   
   
-  Creation of Jules Wyvern
+  
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Roland Artmeladze</a>.
-  </div>
 </body>
 </html>
