NFT preview card component 4

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ border-radius: 50%;
 
             <div class="attribution">
               Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-              Coded by <a href="#">Roland Artmeladze</a>.
+              Coded by <a href="https://github.com/rolandiartmeladze">Roland Artmeladze</a>.
             </div>
           
   </div>
